# BattleShip

./: 3_DifferentLenShips.txt  AiPlayer.cpp  AiPlayer.h  AttackMove.cpp  AttackMove.h  BattleShip.hpp  BattleshipMVC.cbp  BeginGame.cpp  BeginGame.h  Board.cpp  Board.h  BoardView.cpp  BoardView.h  CMakeLists.txt  CheatingAi.cpp  CheatingAi.h  Creation.cpp  Creation.h  DeclareResult.cpp  DeclareResult.h  EndGame.cpp  EndGame.h  Game.cpp  Game.h  Grid.cpp  Grid.h  HumanPlayer.cpp  HumanPlayer.h  HuntDestroyAI.cpp  HuntDestroyAI.h  Move.cpp  Move.h  NumPlayer.cpp  NumPlayer.h  Player.cpp  Player.h  README.md  RandomAI.cpp  RandomAI.h  Ship.cpp  (+8 more)
